--- a/flutter_sheet_localization_generator/pubspec.yaml
+++ b/flutter_sheet_localization_generator/pubspec.yaml
@@ -7,7 +7,10 @@ environment:
   sdk: ">=2.5.0 <3.0.0"
 
 dependencies:
-  http: ^0.12.0
+  # http: ^0.12.0
+  http:
+    git: 
+      url: https://github.com/rpaat/http.git
   meta: ^1.1.7
   csv: ^4.0.3
   recase: ^3.0.0
