--- a/flutter_sheet_localization_generator/pubspec.yaml
+++ b/flutter_sheet_localization_generator/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   build: ^1.2.0
   analyzer: ">=0.39.0 <0.40.0"
   collection: ^1.14.11
-  intl: ^0.16.1
+  intl: ^0.17.0-nullsafety.2
 
 dev_dependencies:
   build_test: ^0.10.3
